Putting display and receiving operations in a class library and organizing some code.

--- a/InterfaceUsuario/InterfaceUsuario.csproj
+++ b/InterfaceUsuario/InterfaceUsuario.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Compartilhado\Compartilhado.csproj" />
+    <ProjectReference Include="..\ConsoleInteraction\ConsoleInteraction.csproj" />
   </ItemGroup>
 
 </Project>
