--- a/InterfaceUsuario/InterfaceUsuario.csproj
+++ b/InterfaceUsuario/InterfaceUsuario.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Compartilhado\Compartilhado.csproj" />
+    <ProjectReference Include="..\Compartilhado\Objects.csproj" />
     <ProjectReference Include="..\ConsoleInteraction\ConsoleInteraction.csproj" />
   </ItemGroup>
 
